--- a/package.json
+++ b/package.json
@@ -9,18 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.19.1",
+    "@tanstack/react-query": "^5.55.4",
+    "@tanstack/react-query-devtools": "^5.55.4",
+    "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/pm": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
+    "@uploadthing/react": "^6.8.0",
+    "arctic": "^1.9.2",
+    "date-fns": "^3.6.0",
+    "ky": "^1.7.2",
+    "lucia": "^3.2.0",
+    "next": "15.0.0-rc.0",
+    "next-themes": "^0.3.0",
+    "prisma": "^5.19.1",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-cropper": "^2.3.3",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "react-image-file-resizer": "^0.4.8",
+    "react-intersection-observer": "^9.13.1",
+    "react-linkify-it": "^1.0.8",
+    "stream-chat": "^8.40.2",
+    "stream-chat-react": "^11.23.9",
+    "uploadthing": "^6.13.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.0-rc.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
+    "typescript": "^5"
   }
 }
