--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -32,7 +33,7 @@
     "date-fns": "^3.6.0",
     "ky": "^1.4.0",
     "lucia": "^3.2.0",
-    "lucide-react": "^0.402.0",
+    "lucide-react": "^0.439.0",
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "prisma": "^5.16.1",
@@ -45,7 +46,7 @@
     "react-linkify-it": "^1.0.8",
     "stream-chat": "^8.37.0",
     "stream-chat-react": "^11.23.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
