--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -40,7 +41,7 @@
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.10.3",
     "react-linkify-it": "^1.0.8",
